src/test/resources/parse/InvalidModifier.casc
ovrd class InvalidModifier

impl InvalidModifier {
    priv mut ovrd comp {

    }

    mut ovrd new() {}
}